[gd_scene load_steps=20 format=3 uid="uid://b2lyr3k3pre3c"]

[ext_resource type="Script" uid="uid://cb6pu5ibm3bnb" path="res://Scripts/Flow/master.gd" id="1_8pywo"]
[ext_resource type="Script" uid="uid://c0ajrvvwg1mr0" path="res://Scripts/Functionality/battleUiFunc.gd" id="2_7wjyn"]
[ext_resource type="Script" uid="uid://ddxq6g32lnrng" path="res://Scripts/Functionality/charFunc.gd" id="2_x7v4w"]
[ext_resource type="Texture2D" uid="uid://b3wagihnnskul" path="res://Assets/Visual/Player/heart.png" id="3_1ck7a"]
[ext_resource type="Script" uid="uid://p4eckqcinrmp" path="res://Scripts/Functionality/boxFunc.gd" id="4_nnkry"]
[ext_resource type="Script" uid="uid://cvdy4wxnantdg" path="res://Scripts/Functionality/boxBg.gd" id="5_nnkry"]
[ext_resource type="Script" uid="uid://cjgij31bcbkho" path="res://Scripts/Functionality/bgGen.gd" id="5_x7v4w"]
[ext_resource type="Script" uid="uid://b30qyqcpctho8" path="res://Scripts/Functionality/bgSidesGen.gd" id="6_1ck7a"]

[sub_resource type="SystemFont" id="SystemFont_nnkry"]
font_names = PackedStringArray("Caladea")
font_weight = 575

[sub_resource type="LabelSettings" id="LabelSettings_7wjyn"]
font = SubResource("SystemFont_nnkry")
font_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3caef"]
bg_color = Color(0.756691, 0, 0.125919, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_puon5"]
bg_color = Color(0.975516, 0.855809, 1.15514e-06, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4th6"]
size = Vector2(7.5, 7.5)

[sub_resource type="Gradient" id="Gradient_7wjyn"]
colors = PackedColorArray(0.244489, 3.60981e-07, 0.14307, 1, 0.722059, 0, 0.288363, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3caef"]
gradient = SubResource("Gradient_7wjyn")
width = 16

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcij8"]
size = Vector2(144, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xx7o"]
size = Vector2(8, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8sf2"]
size = Vector2(144, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xecyf"]
size = Vector2(8, 128)

[node name="Node2D" type="Node2D"]
z_index = -1
script = ExtResource("1_8pywo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 376.0
offset_right = 640.0
offset_bottom = 480.0
script = ExtResource("2_7wjyn")

[node name="HP_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 272.0
offset_top = 8.0
offset_right = 298.0
offset_bottom = 32.0
text = "HP"
label_settings = SubResource("LabelSettings_7wjyn")

[node name="HP_Bar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 296.0
offset_top = 12.0
offset_right = 360.0
offset_bottom = 28.0
theme_override_styles/background = SubResource("StyleBoxFlat_3caef")
theme_override_styles/fill = SubResource("StyleBoxFlat_puon5")
max_value = 20.0
value = 20.0
rounded = true
allow_greater = true
show_percentage = false

[node name="ActButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 184.0
offset_top = 48.0
offset_right = 312.0
offset_bottom = 92.0
focus_neighbor_left = NodePath("../FightButton")
focus_neighbor_right = NodePath("../ItemButton")
focus_mode = 0
mouse_filter = 2
text = "ACT"

[node name="ItemButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 328.0
offset_top = 48.0
offset_right = 456.0
offset_bottom = 92.0
focus_neighbor_left = NodePath("../ActButton")
focus_neighbor_right = NodePath("../MercyButton")
focus_mode = 0
mouse_filter = 2
text = "ITEMS"

[node name="MercyButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 472.0
offset_top = 48.0
offset_right = 600.0
offset_bottom = 92.0
focus_neighbor_left = NodePath("../ItemButton")
focus_neighbor_right = NodePath("../FightButton")
focus_mode = 0
mouse_filter = 2
text = "MERCY"

[node name="FightButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 40.0
offset_top = 48.0
offset_right = 168.0
offset_bottom = 92.0
focus_neighbor_left = NodePath("../MercyButton")
focus_neighbor_right = NodePath("../ActButton")
focus_mode = 0
mouse_filter = 2
text = "FIGHT"

[node name="PlayerSoul" type="CharacterBody2D" parent="." node_paths=PackedStringArray("ui", "box")]
z_index = 100
position = Vector2(320, 300)
script = ExtResource("2_x7v4w")
damageSfx = "uid://bwd048dqgp1il"
invDuration = 0.075
invAmount = 9
ui = NodePath("../Control")
box = NodePath("../Box")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSoul"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_u4th6")

[node name="Sprite2D" type="Sprite2D" parent="PlayerSoul"]
clip_children = 2
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("3_1ck7a")

[node name="Mask" type="Sprite2D" parent="PlayerSoul/Sprite2D"]
rotation = 1.57079
scale = Vector2(-0.518048, 8.12173)
texture = SubResource("GradientTexture1D_3caef")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerSoul"]
scale = Vector2(0.972982, 1.68795)

[node name="Box" type="StaticBody2D" parent="." node_paths=PackedStringArray("player", "UIObject")]
z_index = 1
position = Vector2(320, 300)
script = ExtResource("4_nnkry")
defaultPosOffset = 65
player = NodePath("../PlayerSoul")
borderWidth = 4
UIObject = NodePath("../Control")
borderColor = Color(0.789229, 0.978901, 0.96732, 1)
backgroundColor = Color(0.0588235, 0.00392157, 0.137255, 1)
boxBgColor = Color(0.000337821, 0.00465186, 0.00441387, 1)

[node name="Box_Top" type="CollisionShape2D" parent="Box"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_xcij8")

[node name="Box_Left" type="CollisionShape2D" parent="Box"]
position = Vector2(-68, 0)
shape = SubResource("RectangleShape2D_4xx7o")

[node name="Box_Bottom" type="CollisionShape2D" parent="Box"]
position = Vector2(0, 60)
shape = SubResource("RectangleShape2D_r8sf2")

[node name="Box_Right" type="CollisionShape2D" parent="Box"]
position = Vector2(68, 0)
shape = SubResource("RectangleShape2D_xecyf")

[node name="Box_Background" type="Node2D" parent="Box"]
z_index = -5
script = ExtResource("5_nnkry")

[node name="Background" type="Node2D" parent="Box" node_paths=PackedStringArray("sideBg", "boxBg", "Box_Top", "Box_Left")]
z_index = -3
script = ExtResource("5_x7v4w")
sideBg = NodePath("../Background_Sides")
boxBg = NodePath("../Box_Background")
Box_Top = NodePath("../Box_Top")
Box_Left = NodePath("../Box_Left")

[node name="Background_Sides" type="Node2D" parent="Box" node_paths=PackedStringArray("Box_Top", "Box_Left")]
z_index = -2
script = ExtResource("6_1ck7a")
Box_Top = NodePath("../Box_Top")
Box_Left = NodePath("../Box_Left")
